# sql-databricks-bridge

./: .env.example  .gitignore  404.html  BOLIVIA_FIXES_APPLIED.md  BOLIVIA_QUICK_STATUS.md  BRASIL_COLUMNS_COMPLETED.md  BRASIL_COLUMNS_FIXED.md  BRASIL_EXTRACTION_SUCCESS.md  BRAZIL_EXTRACTION_GUIDE.md  CLAUDE.md  CROSS_COUNTRY_VALIDATION_REPORT.md  DBA_ACCESS_REQUEST.md  DBA_ACCESS_REQUEST_BRAZIL.md  DIFF_SYNC_PERFORMANCE_REPORT.md  MISSING_COLUMNS_INVESTIGATION.md  MULTI_COUNTRY_VALIDATION_SUMMARY.md  PS_LATAM_TABLE_INVESTIGATION.md  QUICK_COMMANDS.md  QUICK_START_SERVER_QUERIES.md  README.md  SERVER_LEVEL_REFACTOR.md  SPRINT.md  SQL_AVAILABILITY_BY_COUNTRY.md  TASKS.md  Users70088287DocumentsProjectssql-databricks-bridgefrontend_response.html  _gen.py  _write_script.py  bolivia_cafe_monthly.csv  cancel_dbx_runs.py  check_remote.ps1  check_remote2.ps1  cleanup_flat_dirs.ps1  cleanup_test.py  copy_queries.ps1  count_nac_ato.py  create_brasil_volume.py  create_server_volumes.py  create_volume_ktclsql002.sql  diagnose_failures.py  diff_sync_test.py  (+38 more)
.claude/: settings.local.json
.github/workflows/: build-executables.yml  build-tauri.yml  ci.yml  deploy-frontend.yml
assets/: index-ChUa0jFI.css  index-DDKtJwZa.js  msal-q6RZkeWj.js  tanstack-CVTt_DyG.js
config/: bolivia.yaml  brasil.yaml  ktclsql001.yaml  ktclsql002.yaml  ktclsql003.yaml  ktclsql004.yaml  service.yaml  stages.yaml
config/countries/argentina/: a_tipocanal.sql  dbm_da2.sql  dbm_da2_items.sql  dbm_filtros.sql  hato_cabecalho.sql  j_atoscompra_new.sql  j_vista_artigos.sql  nac_ato.sql  vw_venues.sql
config/countries/bolivia/: a_painelproduto.sql  domicilios.sql  j_atoscompra_new.sql  mordom.sql  nac_ato.sql  rg_domicilios_pesos.sql
config/countries/brasil/: j_atoscompra_new_atos_scc.sql  mordom.sql  pre_mordom.sql  rg_domicilios_pesos.sql  rg_panelis.sql  test_rg_panelis_all.sql
config/countries/cam/: cm_region_estrato.sql  domicilio_posse_bens.sql  j_atoscompra_new.sql  mordom.sql  origen.sql  rg_domicilios_pesos.sql  rg_panelis.sql  vw_venues.sql
config/countries/chile/: a_accesocanal.sql  a_flgscanner.sql  a_subproduto.sql  domicilio_posse_bens.sql  domicilios.sql  hato_cabecalho.sql  individuo.sql  mordom.sql  pais.sql  rg_domicilios_pesos.sql  rg_panelis.sql  tblproductosinternos.sql
config/countries/colombia/: a_conteudoproduto.sql  cidade.sql  domicilio_posse_bens.sql  hato_cabecalho.sql  j_atoscompra_new.sql  mordom.sql  rg_domicilios_pesos.sql  rg_panelis.sql  (+1 more)
config/servers/: ktclsql002.yaml
debug-screenshots/: gen.js  gen.py  test-frontend.cjs  verify-fix.cjs  write_js.py
deploy/: .env.template  README.md
deploy-frontend/: README.md  config.json
docs/: API_CONTRACT_FRONTEND.md  ARCHITECTURE.md  BUILD_EXECUTABLE.md  DELTA_SHARING_CHEATSHEET.md  DELTA_SHARING_GUIDE.md  DELTA_TABLES.md  EPICS_AND_USER_STORIES.md  GUIA_SINCRONIZACION_DATABRICKS_SQL.md  GUIA_USUARIO.md  QUICK_START.md  RCA_skip_segments_report.md  SDK_USER_GUIDE.md  api-reference.md  backend-documentation.md  calibration_integration_analysis.md  calibration_ux_gaps.md  databricks-to-sql-sync.html  frontend-documentation.md  resumen-ejecutivo.md
frontend/: .env  .env.example  index.html  package-lock.json  package.json  playwright.config.ts  verify-fix.cjs  vite.config.ts
frontend/e2e/: bolivia-parallel.spec.ts  chile-sync.spec.ts  performance.spec.ts  peru-top100.spec.ts  smoke.spec.ts
frontend/mock-server/: hybrid-proxy.js  package-lock.json  package.json  server.js
frontend/public/: config.js
frontend/src/: App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
packaging/: entry_point.py
packaging/hooks/: hook-kantar_db_handler.py  hook-sql_databricks_bridge.data.py
queries/: MISSING_TABLES_ADDED.md
queries_full/queries/: README.md
scripts/: add_data_shoveling_queries.py  analyze_column_availability.py  create_canonical_queries.py  enable_delta_sharing.py  generate_country_queries.py  get_table_schemas.py  merge_data_shoveling_queries.py  merge_elegibilidad_queries.py  merge_kwp_country_folders.py  merge_precios_queries.py  migrate_queries.py  normalize_queries.py  setup_databricks_tables.py  test_databricks_connection.py  verify_delta_sharing.py
sdk/: README.md  azure-pipelines.yml  pyproject.toml
sdk/sql_databricks_bridge_sdk/: __init__.py  api_client.py  events_client.py  exceptions.py  models.py
sdk/tests/: __init__.py
specs/: PRD-sql-databricks-bridge.md  PRD-sync-scheduler.md  SPEC-schedule-api.md  SPEC-schedule-notifications.md  SPEC-scheduler-core.md
src/sql_databricks_bridge/: __init__.py  __main__.py  main.py  server.py
tests/: __init__.py  conftest.py  test_diff_sync.py  test_eligibility_api.py
tests/integration/: test_calibration_flow.py  test_databricks_only.py  test_sync_flow.py
tests/unit/: test_api_endpoints.py  test_argentina_cross_validation.py  test_auth.py  test_azure_ad_auth.py  test_calibration_launcher.py  test_calibration_tracker.py  test_country_query_loader.py  test_databricks_monitor.py  test_db_clients.py  test_delta_writer.py  test_dependencies.py  test_diff_sync.py  test_events_endpoint.py  test_extract_api.py  test_extractor.py  test_health.py  test_jobs_api.py  test_jobs_table.py  test_loader.py  test_local_store.py  test_main.py  test_operations.py  test_param_resolver.py  test_permissions.py  test_pipeline_endpoint.py  test_pipeline_tracker.py  test_poller.py  test_poller_hardening.py  test_poller_mitigations.py  test_query_loader.py  test_repair_full.py  test_retry.py  test_simulador_sync.py  test_stages.py  test_sync_api.py  test_sync_recovery.py  test_traceability_api.py  test_traceability_table.py  test_trigger_calibration.py  test_trigger_endpoint.py  (+5 more)
(+854 files in other folders)
