[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql-databricks-bridge-sdk"
version = "0.1.0"
description = "Python SDK for interacting with the SQL-Databricks Bridge service"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kantar", email = "support@kantar.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["databricks", "sql-server", "sync", "bridge", "sdk"]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
databricks = [
    "pyspark>=3.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]
all = [
    "sql-databricks-bridge-sdk[databricks,dev]",
]

[project.urls]
Homepage = "https://dev.azure.com/kantarware/KWP-MyWorldPanel-ITLatam"
Documentation = "https://dev.azure.com/kantarware/KWP-MyWorldPanel-ITLatam"
Repository = "https://dev.azure.com/kantarware/KWP-MyWorldPanel-ITLatam/_git/sql-databricks-bridge"

[tool.hatch.build.targets.wheel]
packages = ["sql_databricks_bridge_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=sql_databricks_bridge_sdk --cov-report=term-missing --cov-report=html --cov-fail-under=80"

[tool.coverage.run]
source = ["sql_databricks_bridge_sdk"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
